--- a/src/main/CMakeLists.txt
+++ b/src/main/CMakeLists.txt
@@ -1,18 +1,17 @@
 add_library(
   messenger
   messenger_capi.c
-  messenger_cppapi.cpp
 )
 
-target_compile_features(messenger PRIVATE cxx_std_11)
+target_compile_features(messenger PRIVATE c_std_11)
 target_link_libraries(messenger OpenSSL::SSL)
 target_include_directories(messenger PUBLIC ../../include)
 
 add_library(
-  messenger_capi
-  messenger_capi.c
+  messengerpp
+  messenger_cppapi.cpp
 )
 
-target_compile_features(messenger_capi PRIVATE c_std_11)
-target_link_libraries(messenger_capi OpenSSL::SSL)
-target_include_directories(messenger_capi PUBLIC ../../include)
+target_compile_features(messengerpp PRIVATE cxx_std_11)
+target_link_libraries(messengerpp messenger)
+target_include_directories(messengerpp PUBLIC ../../include)
