--- a/src/test/CMakeLists.txt
+++ b/src/test/CMakeLists.txt
@@ -19,6 +19,11 @@
 
 add_subdirectory("${PROJECT_SOURCE_DIR}/vendor/googletest" "vender/googletest")
 
+add_library(
+  messenger_test_kit
+    test_kit.cpp
+)
+
 mark_as_advanced(
     BUILD_GMOCK BUILD_GTEST BUILD_SHARED_LIBS
     gmock_build_tests gtest_build_samples gtest_build_tests
@@ -32,11 +37,11 @@ set_target_properties(gmock_main PROPERTIES FOLDER vendor)
 
 macro(package_add_test TESTNAME)
   add_executable(${TESTNAME} ${ARGN})
-  target_link_libraries(${TESTNAME} gtest gmock gtest_main)
+  target_link_libraries(${TESTNAME} messenger_test_kit gtest gmock gtest_main)
   gtest_discover_tests(
     ${TESTNAME}
-    WORKING_DIRECTORY ${PROJECT_DIR}
-    PROPERTIES VS_DEBUGGER_WORKING_DIRECTORY "${PROJECT_DIR}"
+    WORKING_DIRECTORY ${CMAKE_CURRENT_PROJECT_DIR}
+    PROPERTIES VS_DEBUGGER_WORKING_DIRECTORY "${CMAKE_CURRENT_PROJECT_DIR}"
   )
   set_target_properties(${TESTNAME} PROPERTIES FOLDER tests)
 endmacro()
